# sentinel-ai

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
ai/: analyser.py
cli/: run.py
scanner/: http_scanner.py  owasp_scorer.py
tests/: test_scanner.py
