[project]
name = "sentinelai"
version = "0.1.0"
description = "AI-powered OWASP vulnerability scanner"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["security", "owasp", "vulnerability-scanner", "appsec", "ai"]

dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.25.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "responses>=0.25.0", "ruff>=0.4.0"]

[project.scripts]
sentinelai = "cli.run:main"

[project.urls]
Homepage = "https://github.com/matthieugraziani/sentinelai"
Issues = "https://github.com/matthieugraziani/sentinelai/issues"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "SIM117"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
